# flowforge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cron_resume.md  local_qwen_setup.md  roadmap.md
flowforge/: __init__.py  _types.py
flowforge/baseline/: __init__.py  optuna_baseline.py  random_grid.py
flowforge/bench/: __init__.py  episode_runner.py  fitness.py  libero_adapter.py
flowforge/cli/: __init__.py  main.py
flowforge/evolve/: __init__.py  search_space.py  shinka_wrapper.py
flowforge/evolve/templates/: __init__.py  reward_shaping.py  sampling_schedule.py
flowforge/guard/: __init__.py  ast_safety.py  budget.py  nan_detector.py  seed.py  stats.py
flowforge/loop/: __init__.py  checkpoint.py  orchestrator.py  population.py
flowforge/mutate/: __init__.py  _json_extract.py  hf_api_client.py  local_qwen.py  router.py
flowforge/mutate/prompts/: mutate_schedule_v1.md
flowforge/policy/: __init__.py  openpi_adapter.py  stub_policy.py
scripts/: bootstrap.sh  cron_resume.sh  release.sh
tests/smoke/: test_end_to_end.py
tests/unit/: test_baseline.py  test_bench_fitness.py  test_bench_stubenv.py  test_cli.py  test_evolve_loop.py  test_evolve_search_space.py  test_evolve_templates.py  test_guard_ast_safety.py  test_guard_budget.py  test_guard_nan.py  test_guard_seed.py  test_guard_stats.py  test_loop_checkpoint.py  test_loop_orchestrator.py  test_mutate_clients.py  test_mutate_router.py
